--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="#!" class="btn">Order Now</a>
             </div>
 
-            <img src="/image.png" alt="image" width="500" height="500">
+            <img src="/images/image.png" alt="image" width="500" height="500">
         </div>
     </main>
 </body>
