--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="header">
         <div class="container">
-            <img src="/images/logo.png" alt="logo" width="90" height="80">
+            <img src="images/logo.png" alt="logo" width="90" height="80">
 
                 <nav>
                     <ul>
@@ -40,7 +40,7 @@
                 <a href="#!" class="btn">Order Now</a>
             </div>
 
-            <img src="/images/image.png" alt="image" width="500" height="500">
+            <img src="images/image.png" alt="image" width="500" height="500">
         </div>
     </main>
 </body>
