--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 
             <img src="images/image.png" alt="image" width="500" height="500">
         </div>
+            <a href="https://aaio.so/" target="_blank">
+	        <img src="https://aaio.so/assets/svg/banners/mini/dark-2.svg" title="Aaio - Сервис по приему онлайн платежей">
+</a>
     </main>
 </body>
 </html>
